# UAWOS

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  API & Contract Standard (ACS).md  Architecture Definition Document (ADD).md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Canonical Ontology Specification (COS).md  Constitutional Architecture (UCA).md  Context, Identity & Access Standard (CIAS).md  Dockerfile  Ecosystem_Building_Blocks_Reference_Guide.md  Federated Graph & Knowledge Architecture Standard (FGKAS).md  Governance & Control Framework Standard (GCF v1.0).md  LICENSE  Makefile  Objective, Planning & Execution Standard (OPES).md  Observability, Telemetry & Digital Twin Standard (OTDTS).md  PRD 1.md  PRD 4.md  PROJECT_ATTRIBUTION_PROVENANCE.md  Pack, Capability & Extensibility Standard (PCES).md  Platform Maturity & Capability Model Standard (PMCMS).md  ProductStrategyAndCommercializationBluePrint.md  README.md  Reference Architecture Standard (RAS).md  Reference Data Model Standard (RDMS).md  SolutionDesignDocument.md  TEST_INTELLIGENCE_REGISTRY.md  UAWOS_Discovery_Report.md  Value Realization Measurement Standard (VRMS).md  Workforce, Agent & Autonomy Standard (WAAS).md  bootstrap.ps1  bootstrap.sh  docker-compose.yml  headroom_memory.db  operations_dashboard.html  (+75 more)
.ai/agents/: registry.json
.ai/datasets/: golden-dataset.json
.ai/evaluations/: promptfooconfig.yaml  scoring-template.json
.ai/guardrails/: policy.json
.ai/prompts/: coder.md  planner.md  researcher.md  reviewer.md  system.md
.ai/reports/: agent-health-report.md
.ai/telemetry/: schema.json
.codex/: config.toml  hooks.json
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-06-20T13-00-00-935Z.yml  page-2026-06-20T13-05-02-369Z.yml  page-2026-06-20T13-05-09-090Z.yml  page-2026-06-20T13-07-50-838Z.yml  page-2026-06-20T13-08-18-115Z.yml  page-2026-06-20T13-08-43-716Z.yml  page-2026-06-20T13-08-47-438Z.yml  page-2026-06-20T13-15-24-490Z.yml  page-2026-06-20T13-15-28-391Z.yml  page-2026-06-20T13-17-43-730Z.yml  page-2026-06-20T13-18-26-387Z.yml
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
Requirements Master/: Adoption Roadmap.md  Agent Catalog.md  Architecture Decision Records.md  Architecture Definition Document (ADD).md  Bootstrap Directive (BD).md  Constitutional Architecture (UCA).md  Dependency Graph.md  Domain Translation & Artifact Synthesis Engine (DTASE).md  Ecosystem Stand-Up and Delivery Roadmap.md  Event, State & Lifecycle Standard (ESLS).md  Governance Catalog.md  Integration Backlog.md  Integration, Tooling & MCP Standard (ITMS).md  Knowledge, Memory & Learning Standard (KMLS).md  MCP Catalog.md  OSS Ecosystem Catalog.md  PRD 2.md  PRD 5.md  Platform Services & Engine Architecture Standard (PSEAS).md  Policy, Risk, Trust & Compliance Standard (PRTCS).md  Portfolio, Value & Resource Standard (PVRS).md  README.md  Recommendation, Reasoning & Decision Intelligence Standard (RRDIS).md  Reference Architecture Standard (RAS).md  Security Catalog.md  Simulation & Forecasting Standard (SFS).md  Skill Catalog.md  SolutionDesignDocument.md  Workforce, Agent & Autonomy Standard (WAAS).md  competitive_positioning_analysis.md
Requirements Master/UI UX Needs/: design.md  uawos_ainative_experience.md  uawos_dashboard_strategy.md  uawos_design_generation_package.md  uawos_design_system.md  uawos_engineering_deliverables.md  uawos_product_blueprint.md  uawos_screen_architecture.md  uawos_technical_blueprint.md  uawos_visualization_architecture.md
adapters/: uawos_semantic_kernel_adapter.py
application/use-cases/: billing_use_cases.py  objective_use_cases.py  outcome_use_cases.py
application/use_cases/: action_use_cases.py  billing_use_cases.py  governance_use_cases.py  memory_use_cases.py  objective_use_cases.py  outcome_use_cases.py  planning_use_cases.py  workflow_use_cases.py
apps/api/: main.py
apps/web/: uawos_architecture.html  uawos_dashboard.html  uawos_requirement_studio.html
apps/web_react/: index.html  package-lock.json  package.json  postbuild.js  vite.config.ts
config/: __init__.py  settings.py
diagrams/: 01-system-context.md  02-container-diagram.md  03-e2e-sequence.md  04-domain-model.md  05-state-machine.md  06-data-flow.md  07-deployment-architecture.md  08-observability-operations.md  README.md
domains/: __init__.py
domains/action/: __init__.py  action.py
domains/billing/: __init__.py  billing.py
domains/governance/: __init__.py  governance.py
domains/memory/: __init__.py  memory.py
domains/objective/: __init__.py  conflict_detector.py  objective.py  scoring.py
domains/outcome/: __init__.py  (+1 more)
governance/: AI_EOS_SPECIFICATION.md  ARCHITECTURE_RISK_REGISTER.md  BLAST_RADIUS_REGISTRY.md  CONTRIBUTOR_ONBOARDING.md  DEPENDENCY_RISK_REGISTER.md  ENGINEERING_DEBT_REGISTER.md  INCIDENT_LEARNING_REGISTRY.md  PLATFORM_GOVERNANCE_REPORT.md  SERVICE_HEALTH_REGISTRY.md  SRE_RUNBOOK.md  TEST_INTELLIGENCE_REGISTRY.md
marker-service/: Dockerfile  app.py
mock-services/: Dockerfile  app.py
scratch/: all_docs.json  audit_codebase.py  audit_report_data.json  check_path.py  convert_lf.py  debug_hang.py  inject_docs.py  inspect_files.py  inspection_output.txt  migrate_engines.py  migrate_state_utils.py  pdf_content.txt  read_fga_tuples.py  read_weaverouter.py  recreate_and_consume.py  run_all_self_tests.py  run_all_tests.py  scan_docs.py  summarize_audit.py  test_api.py  test_api_auth.py  test_api_contracts.py  test_daemon_auth.py  test_dashboard_regression.py  test_dtase.py  test_e2e_pipeline.py  test_encryption_warning.py  test_fga.py  test_fga_check.py  test_fga_integration.py  test_fga_model.py  test_fga_models.py  test_governance_scanner.py  test_neo4j_http.py  test_neo4j_sync.py  test_opa.py  test_performance.py  test_requirement_studio.py  test_state_fallback.py  test_weaverouter_fallback.py  (+6 more)
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py
(+102 files in other folders)
