[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uawos"
version = "0.5.0"
description = "Universal AI Workforce Operating System — Transform objectives into measurable value through governed human and AI workforce execution."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "UAWOS Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

# Core runtime dependencies — required for the dashboard daemon to operate
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "psycopg2-binary>=2.9.9",
    "qdrant-client>=1.7.0",
    "networkx>=3.3",
]

[project.optional-dependencies]
# AI Engineering Platform Layer
ai = [
    "pydantic-ai>=0.0.18",
    "dspy-ai>=2.4.0",
    "instructor>=1.3.0",
    "outlines>=0.0.34",
    "guidance>=0.1.15",
]

# Agent Memory Layer
memory = [
    "mem0ai>=0.1.10",
    "graphiti-core>=0.1.0",
]

# RAG & Knowledge Layer
rag = [
    "haystack-ai>=2.0.0",
    "llama-index>=0.10.35",
    "fastembed>=0.2.7",
    "unstructured[all-docs]>=0.14.0",
]

# Data & Analytics Engineering
data = [
    "dbt-core>=1.8.0",
    "meltano>=3.4.0",
]

# Digital Twin & Agent Simulation
simulation = [
    "mesa>=2.2.0",
]

# Governance & Data Lineage
governance = [
    "openlineage-python>=1.15.0",
    "marquez-python>=0.36.0",
    "openmetadata-ingestion>=1.4.0",
]

# Development tools
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "pip-audit>=2.7.0",
]

# Install everything
all = [
    "uawos[ai,memory,rag,data,simulation,governance]",
]

[project.urls]
Homepage = "https://github.com/rjmad1/UAWOS"
Documentation = "https://github.com/rjmad1/UAWOS/wiki"
Repository = "https://github.com/rjmad1/UAWOS"
Issues = "https://github.com/rjmad1/UAWOS/issues"

[tool.setuptools]
py-modules = [
    "uawos_dashboard_daemon",
    "uawos_db",
    "uawos_context",
    "uawos_state_utils",
    "uawos_traceability",
    "uawos_objective",
    "uawos_outcome",
    "uawos_planning",
    "uawos_workflow",
    "uawos_action",
    "uawos_workforce",
    "uawos_agent_workforce",
    "uawos_governance",
    "uawos_knowledge",
    "uawos_memory",
    "uawos_learning",
    "uawos_resource",
    "uawos_budget",
    "uawos_decision",
    "uawos_simulation",
    "uawos_value",
    "uawos_observability",
    "uawos_integrations",
    "uawos_pmcms",
    "uawos_dtase",
    "uawos_requirement_studio",
]

[tool.ruff]
target-version = "py310"
line-length = 120
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM"]
ignore = ["S101", "S603", "S607"]  # Allow assert in tests, subprocess calls

[tool.ruff.per-file-ignores]
"scratch/*" = ["S"]  # Relax security rules for scratch/test scripts

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["scratch"]
python_files = ["test_*.py", "verify_*.py"]
python_functions = ["test_*", "verify_*"]
