[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uawos"
version = "0.5.0"
description = "Universal AI Workforce Operating System — Transform objectives into measurable value through governed human and AI workforce execution."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "UAWOS Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

# Core runtime dependencies — required for the dashboard daemon to operate
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "psycopg2-binary>=2.9.9",
    "qdrant-client>=1.7.0",
    "networkx>=3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "pip-audit>=2.7.0",
]

all = []


[project.urls]
Homepage = "https://github.com/rjmad1/UAWOS"
Documentation = "https://github.com/rjmad1/UAWOS/wiki"
Repository = "https://github.com/rjmad1/UAWOS"
Issues = "https://github.com/rjmad1/UAWOS/issues"

[tool.setuptools]
py-modules = [
    "uawos_dashboard_daemon",
    "uawos_db",
    "uawos_context",
    "uawos_state_utils",
    "uawos_traceability",
    "uawos_objective",
    "uawos_outcome",
    "uawos_planning",
    "uawos_workflow",
    "uawos_action",
    "uawos_workforce",
    "uawos_agent_workforce",
    "uawos_governance",
    "uawos_knowledge",
    "uawos_memory",
    "uawos_learning",
    "uawos_resource",
    "uawos_budget",
    "uawos_decision",
    "uawos_simulation",
    "uawos_value",
    "uawos_observability",
    "uawos_integrations",
    "uawos_pmcms",
    "uawos_dtase",
    "uawos_requirement_studio",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM"]
ignore = [
    "S101",  # Allow assert statements
    "S603",  # Allow subprocess calls without shell=True
    "S607",  # Allow subprocess calls with relative paths
    "E501",  # Ignore line length limits
    "S110",  # Ignore try-except-pass checks
    "S310",  # Ignore urlopen audit checks
    "B904",  # Ignore exception chaining checks
    "S104",  # Allow binding to all interfaces (0.0.0.0)
    "S105",  # Allow mock/test secrets
    "S608",  # Allow parameterized SQL string constructions
]

[tool.ruff.lint.per-file-ignores]
"scratch/*" = ["S", "E402"]  # Relax security and import order checks for scripts

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["scratch", "tests"]
python_files = ["test_*.py", "verify_*.py"]
python_functions = ["test_*", "verify_*"]
